--- a/Scarb.toml
+++ b/Scarb.toml
@@ -9,11 +9,11 @@ openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", br
 
 [dev-dependencies]
 snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.31.0" }
-assert_macros = "2.8.4"
+assert_macros = "2.8.5"
 
 [[target.starknet-contract]]
 sierra = true
-src = "src" 
+src = "src/lib.cairo" 
 
 [scripts]
 test = "snforge test"
