--- a/Scarb.toml
+++ b/Scarb.toml
@@ -4,16 +4,15 @@ version = "0.1.0"
 edition = "2023_11"
 
 [dependencies]
-starknet = ">=2.3.1"
-openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", branch = "main" } # Changed to main branch
+starknet = "^2.9.2"
+openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git" }
+snforge_std = "^0.31.0"  # Using registry version instead of git
 
-[dev-dependencies]
-snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry", tag = "v0.31.0" }
-assert_macros = "2.8.5"
 
 [[target.starknet-contract]]
 sierra = true
-src = "src/lib.cairo" 
+src = "src/lib.cairo"
 
 [scripts]
 test = "snforge test"
+gas-report = "snforge test --gas-report"
