--- a/Scarb.toml
+++ b/Scarb.toml
@@ -6,9 +6,9 @@ edition = "2023_11"
 [dependencies]
 starknet = "^2.9.2"
 openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git" }
-snforge_std = "^0.31.0"  
-alexandria = { git = "https://github.com/keep-starknet-strange/alexandria.git" }
 
+[dev-dependencies]
+snforge_std = "0.31.0"
 
 [[target.starknet-contract]]
 sierra = true
