--- a/Scarb.toml
+++ b/Scarb.toml
@@ -4,11 +4,11 @@ version = "0.1.0"
 edition = "2023_11"
 
 [dependencies]
-starknet = "^2.9.2"
+starknet = "^2.10.1"
 openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git" }
 
 [dev-dependencies]
-snforge_std = "0.31.0"
+snforge_std = { version = "~0.38.0" }
 
 [[target.starknet-contract]]
 sierra = true
