Updates register_task to use flat parameters in place of task struct. Updates all reward var type to use u256. Fixes bug with assign_task

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,9 @@ dist/
 # System Files
 .DS_Store
 Thumbs.db
+
+# Starknet Development
+account.json
+keystore.json
+.tool-versions
+provider_account.json
